fix spacing and layout

--- a/site/layouts/events/item.html
+++ b/site/layouts/events/item.html
@@ -1,6 +1,6 @@
-<div class="w-100-ns pa3 bg-grey-1 br1 mb2 db raise">
+<div class="w-100-ns  pa4 bg-grey-1 br1 db">
     <a href="{{ .RelPermalink }}" class="no-underline">
-    <img src="{{ .Params.listItemImage }}" alt="" class="center db mb3">
+    <img src="{{ .Params.listItemImage }}" alt="" class="center db mb3 h5-ns">
     <div class="tc">
         <p>{{ .Params.listItemTitle }}</p>
         <a href="{{ .RelPermalink }}" target="_blank" rel="noopener" class="btn raise">{{.Params.callToAction}}</a>
