--- a/site/layouts/section/white_papers.html
+++ b/site/layouts/section/white_papers.html
@@ -2,7 +2,7 @@
 
 {{ partial "jumbotron_gradient" (dict "imageUrl" .Params.image "title" .Title "class" .Params.jumboClass) }}
 
-<div class="bg-off-white pt4 cms">
+<div class="bg-off-white pa2 pv4 pa4-m cms">
 	<div class="mw9 center ph2-ns cms">
 		{{ if .Params.heading }}
 		<h2 class="f2 b lh-title mb2">{{.Params.heading}}</h2>
