--- a/site/layouts/events/events.html
+++ b/site/layouts/events/events.html
@@ -2,8 +2,8 @@
 
 {{ partial "jumbotron_gradient" (dict "imageUrl" .Params.image "title" .Title "class" .Params.jumboClass) }}
 
-<div class="bg-off-white pt4">
-	<div class="mw7 center">
+<div class="bg-off-white pa2 pv4 pa4-m cms">
+	<div class="mw9 center ph2-ns cms">
 		<h2 class="f2 b lh-title mb2">{{.Params.heading}}</h2>
 		<p class="mb4 mw6">{{.Params.intro | markdownify}}</p>
 		{{ .Render "list" }}
