--- a/site/layouts/events/list.html
+++ b/site/layouts/events/list.html
@@ -1,6 +1,6 @@
-<div class="w-100 flex-ns mhn1-ns flex-wrap mb3">
+<div class="w-100 flex-ns mhn1-ns flex-wrap mb3 ">
     {{ range first 4 (where .Pages "Type" "events") }}
-        <div class="ph1-ns w-50-ns flex">                  
+    <div class="w-third-l w-90-m w-90-s flex ph3-m mb4 mb0-m raise">                
             {{ .Render "item"}}
         </div>
     {{ end }}
