adjusted pages spacing and added messaging to navi

--- a/site/layouts/_default/list-webinars-upcoming.html
+++ b/site/layouts/_default/list-webinars-upcoming.html
@@ -1,17 +1,19 @@
 <div class="w-100 flex-ns flex-wrap items-start">
+    
     {{$future_events := where (where .Pages "Type" "webinars") "Params.enabled" true }}
     {{ $counter := 0 }}
     {{ range sort $future_events }}
     {{ $endDate := time .Params.endDate }}
     {{ if ge $endDate.YearDay now.YearDay }}
     {{ $counter = add $counter 1 }}
-    <div class="w-third-ns .w-auto-m flex ph3-m mb4 mb0-m raise">
+    <div class="w-third-l  flex ph3-m mb4 mb0-m raise">  
         {{ .Render "item"}}
     </div>
     {{ end}}
     {{ end }}
     {{ if eq $counter 0 }}
-    <div class="w-third-ns .w-auto-m flex ph3-m mb4 mb0-m raise"> 
+    
+    <div class="w-third-l  flex ph3-m mb4 mb0-m raise">  
         {{ partial "coming_soon" }}
     </div>       
     {{ end}}
