--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -41,6 +41,7 @@
 				<ul>
 					<li><a href="/white_papers" class="">White Papers</a></li>
 					<li><a href="/webinars" class="">Webinars</a></li>
+					<li><a href="/resources" class="">Messaging</a></li>
 					<li><a href="/post" class="">Blog</a></li>
 					<li><a href="/audio-reviews" class="">Audio Reviews</a></li>
 					<li><a href="/voice-chats" class="">Video</a></li>
@@ -84,6 +85,7 @@
 				<ul>
 					<li><a href="/white_papers" class="">White Papers</a></li>
 					<li><a href="/webinars" class="">Webinars</a></li>
+					<li><a href="/resources" class="">Messaging</a></li>
 					<li><a href="/post" class="">Blog</a></li>
 					<li><a href="/audio-reviews" class="">Audio Reviews</a></li>
 					<li><a href="/voice-chats" class="">Video</a></li>
