--- a/site/layouts/section/white_papers.html
+++ b/site/layouts/section/white_papers.html
@@ -9,8 +9,8 @@
 		{{ end}}
 		{{ if .Params.intro }}
 		<p class="pa1 mb4 mw7">{{.Params.intro | markdownify}}</p>
-		{{ end}}						
-		<div class="w-100-ns pa4 pb1 pb4-m bg-grey-2 center">
+		{{ end}}		
+		<div class="w-100-ns pa2 pb2-m bg-grey-2 center">
 		{{ .Render "list-white-papers"}}	
 		</div>			
 	</div>
