--- a/site/layouts/section/white_papers.html
+++ b/site/layouts/section/white_papers.html
@@ -10,7 +10,7 @@
 		{{ if .Params.intro }}
 		<p class="pa1 mb4 mw7">{{.Params.intro | markdownify}}</p>
 		{{ end}}		
-		<div class="w-100-ns pa2 pb2-m bg-grey-2 center">
+		<div class="w-100-ns pa2 pb2-m center">
 		{{ .Render "list-white-papers"}}	
 		</div>			
 	</div>
