--- a/site/layouts/webinars/webinars.html
+++ b/site/layouts/webinars/webinars.html
@@ -13,7 +13,7 @@
 
 		<!-- pa4 pb1 -->
 		
-		<div class="w-100-ns pa4 ma1 pb4-m bg-grey-2 raise center">
+		<div class="w-100-ns pa4 ma1 pb4-m  raise center">
 			{{ if .Params.topSectionHeading  }} <h3> {{.Params.topSectionHeading }} </h3> 
 			{{end}}
 			{{ if .Params.topSectionHeadingIntro }}
@@ -22,7 +22,7 @@
 			{{ .Render "list-webinars-upcoming" }} 
 		</div>	
 
-		<div class="w-100-ns pa4 ma1 pb4-m bg-grey-2 raise center">
+		<div class="w-100-ns pa4 ma1 pb4-m raise center">
 			{{ if .Params.bottomSectionHeading  }} <h3> {{.Params.bottomSectionHeading }} </h3> 
 			{{end}}
 			{{ if .Params.bottomSectionHeadingIntro }}
