--- a/site/layouts/partials/video_player.html
+++ b/site/layouts/partials/video_player.html
@@ -1,4 +1,4 @@
-<div class="center db mb3 h5-ns">
+<div class="center db mb3 vh-auto min-vh-auto" >
 <iframe width="100%" height="315" src="{{ .videoUrl }}" title="YouTube video player" 
 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
