--- a/site/layouts/_default/list-webinars-past.html
+++ b/site/layouts/_default/list-webinars-past.html
@@ -1,17 +1,17 @@
-<div class="w-100 flex-ns flex-wrap ">
+<div class="w-100 center flex flex-row flex-wrap mb4">
     {{$past_events := where ( where .Pages "Type" "webinars") "Params.enabled" true   }}
     {{ $counter := 0 }}
     {{ range sort $past_events }}
     {{ $endDate := time .Params.endDate }}
     {{ if lt $endDate.YearDay now.YearDay }}
     {{ $counter = add $counter 1 }}
-    <div class="w-third-l w-90-m w-90-s  flex ph3-m mb4 mb0-m raise">
+    <div class="w-100 w-third-l w-50-m  flex raise ">    
         {{ .Render "item"}}
     </div>
     {{ end}}
     {{ end }}  
     {{ if eq $counter 0 }}
-    <div class="w-third-l w-90-m w-90-s flex ph3-m mb4 mb0-m raise"> 
+    <div class="w-100 w-third-l w-50-m  flex raise ">  
         {{ partial "coming_soon" }}
     </div>       
     {{ end}} 
