--- a/site/layouts/section/white_papers.html
+++ b/site/layouts/section/white_papers.html
@@ -2,17 +2,17 @@
 
 {{ partial "jumbotron_gradient" (dict "imageUrl" .Params.image "title" .Title "class" .Params.jumboClass) }}
 
-<div class="bg-off-white pa2 pv4 pa4-m cms">
-	<div class="mw9 center ph2-ns cms">
+<div class="mw9 bg-off-white pv4 pl2 pr2 pa4-ns cms center">
+	<div class="w-100 ph2-ns center cms">
 		{{ if .Params.heading }}
 		<h2 class="f2 b lh-title mb2">{{.Params.heading}}</h2>
 		{{ end}}
 		{{ if .Params.intro }}
 		<p class="pa1 mb4 mw7">{{.Params.intro | markdownify}}</p>
 		{{ end}}		
-		<div class="w-100-ns pa2 pb2-m center">
+		<!-- <div class="w-100-ns pa2 pb2-m center"> -->
 		{{ .Render "list-white-papers"}}	
-		</div>			
+		<!-- </div>			 -->
 	</div>
 </div>
 {{ end }}
