--- a/site/layouts/webinars/webinars.html
+++ b/site/layouts/webinars/webinars.html
@@ -2,8 +2,8 @@
 
 {{ partial "jumbotron_gradient" (dict "imageUrl" .Params.image "title" .Title "class" .Params.jumboClass) }}
 
-<div class="bg-off-white pa2 pv4 pa4-m cms">
-	<div class="mw9 center ph2-ns cms">
+<div class="mw9 bg-off-white pv4 pl2 pr2 pa4-ns cms center">
+	<div class="w-100 ph2-ns center cms">
 		{{ if .Params.heading }}
 		<h2 class="f2 b lh-title mb2">{{.Params.heading}}</h2>
 		{{ end}}
@@ -13,7 +13,7 @@
 
 		<!-- pa4 pb1 -->
 		
-		<div class="w-100-ns pa4 ma1 pb4-m  raise center">
+		<div>
 			{{ if .Params.topSectionHeading  }} <h3> {{.Params.topSectionHeading }} </h3> 
 			{{end}}
 			{{ if .Params.topSectionHeadingIntro }}
@@ -22,7 +22,7 @@
 			{{ .Render "list-webinars-upcoming" }} 
 		</div>	
 
-		<div class="w-100-ns pa4 ma1 pb4-m raise center">
+		<div >
 			{{ if .Params.bottomSectionHeading  }} <h3> {{.Params.bottomSectionHeading }} </h3> 
 			{{end}}
 			{{ if .Params.bottomSectionHeadingIntro }}
