--- a/site/layouts/events/single.html
+++ b/site/layouts/events/single.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
-{{ partial "jumbotron_gradient" (dict "imageUrl" .Params.pageHeaderBckImge "title" .Params.eventTitle "subtitle" .Params.eventSubTitle "class" .Params.jumboClass) }}
+{{ partial "jumbotron_gradient" (dict "imageUrl" .Params.pageHeaderBckImge "title" .Params.eventTitle "subtitle"
+.Params.eventSubTitle "class" .Params.jumboClass) }}
 <div class="mw9 center ph2-ns cms">
   <!-- <h1 class="f2 lh-title b mb3">{{.Title}}</h1>
       <div class="flex justify-between grey-3">
@@ -11,7 +12,7 @@
         </div> -->
   <div class="flex-ns w-100-ns pa2 center">
     <div class="flex-ns w-100-ns pa2 h7-ns ">
-      <div>  {{ .Params.eventDescription | safeHTML | markdownify }} </div>
+      <div> {{ .Params.eventDescription | safeHTML | markdownify }} </div>
     </div>
     {{ if .Params.eventInfoImage }}
     <div class="w-100-ns pa2 h5-ns">
@@ -20,9 +21,9 @@
         {{ if .Params.eventInfoImage }}<img src="{{ .Params.eventInfoImage }}" />
         {{ end }}
       </a>
-      {{ else }}     
+      {{ else }}
       <img src="{{ .Params.eventInfoImage }}" />
-        {{ end }}
+      {{ end }}
     </div>
     {{ end }}
   </div>
@@ -33,25 +34,28 @@
   {{ end }}
   <div class="w-100-ns pa2 ma1 bg-grey-2 raise center">
     {{ if $.Params.sessionsHeaderText }} <h3> {{$.Params.sessionsHeaderText}} </h3> {{end}}
-    <div class="w-100-ns flex-ns flex-wrap center">
-    {{ range .Params.eventSessions }}
-    <div class="w-40-ns bg-grey-1 ma1 pa2 raise h9-ns">
-      <h3 class="fw5"> {{.topic}} </h3>
-      <div> Time: {{ .timeslot}} </div>
-      <div>
-        <div>
-          <h4>{{ $.Params.presentersHeaderText }}</h4>
+    <div class="w-100 center flex flex-row flex-wrap mb4">
+      {{ range .Params.eventSessions }}
+      <div class="w-50-l flex raise h9-ns">
+        <div class="mw7 bg-grey-1 raise pa4-s pa2 ma1 vh-auto min-vh-auto ">
+          <h3 class="fw5"> {{.topic}} </h3>
+          <div> Time: {{ .timeslot}} </div>
+          <div>
+            <div>
+              <h4>{{ $.Params.presentersHeaderText }}</h4>
+            </div>
+            <ul class="pl3">
+              {{ range .presenters }}
+              <li> {{.name}} </li>
+              {{end}}
+            </ul>
+          </div>
         </div>
-        <ul class="pl3">
-          {{ range .presenters }}
-          <li> {{.name}} </li>
-          {{end}}
-        </ul>
       </div>
-    </div>
-    {{end}}
+      {{end}}
     </div>
   </div>
+
   <div class="w-100-ns tc pa2 ma1">
     {{ if .Params.eventRegistrationCallToActionImgUrl }}
     <a href="{{.Params.eventRegistrationCallToActionUrl}}" target="_blank" rel="noopener" class="btn raise">
@@ -63,15 +67,20 @@
 
   <div class="w-100-ns pa2 ma1 bg-grey-2 raise center">
     {{ if $.Params.bioHeaderText }} <h3> {{$.Params.bioHeaderText}} </h3> {{end}}
-    <div class="w-100-ns flex-ns flex-wrap center">
+    <div class="w-100 center flex flex-row flex-wrap mb4">
       {{ range .Params.eventParticipantBios }}
-      <div class="w-40-ns bg-grey-1 pa1 ma1 raise">
-        <p>
-          <img src="{{.photoUrl}}#left-thumbnail" />
-        <h4>{{.name}}</h4>
-        {{.bio}}
-        </p>
+
+      <div class="w-50-l  flex raise ">
+        <div class="mw7 bg-grey-1 raise pa4-s pa2 ma1 vh-auto min-vh-auto">
+          <p>
+            <img src="{{.photoUrl}}#left-thumbnail" class="bio-thumbnail db mb1" />
+          <h4>{{.name}}</h4>
+          {{.bio}}
+          </p>
+        </div>
+
       </div>
+
       {{ end}}
     </div>
   </div>
