--- a/site/layouts/_default/become-a-friend.html
+++ b/site/layouts/_default/become-a-friend.html
@@ -11,10 +11,31 @@
     <div class="pl3">
       <form action="/friends-of-the-open-voice-network/thank-you/" method="POST" name="become_a_friend" netlify>
         <div>
-          <p>Organization Name: <input type="text" name="org_name" /></p>   
+          <p>Organization Name: <input type="text" name="org_name"  /></p>   
         </div>
         <div>
-          <p>Logo (.svg or .ai format preferred, if possible): <input type="file" name="org_logo" accept="image/*,.ai,.svg,.psd,.eps" /></p>
+          <p>Contact email: <input type="email" name="contact_email"  /></p>   
+        </div>
+        <div>
+          <fieldset>
+           <legend>How did you hear about the Friends of the Open Voice Network program?</legend> 
+           <p>       
+             <div>
+                <input type="checkbox" name="hear_about" value="blog" >Blog or publication
+              </div>  
+              <div> <input type="checkbox" name="hear_about" value="event" >Conference or Event </div>      
+              <div> <input type="checkbox" name="hear_about" value="peer" >Peer recommendation </div>  
+              <div>  <input type="checkbox" name="hear_about" value="podcast" >Podcast </div>  
+              <div>   <input type="checkbox" name="hear_about" value="seo" >Search engine </div>  
+              <div> <input type="checkbox" name="hear_about"  value="social" >Social media</div>  
+              <div> <input type="checkbox" id="hear_about_other_checkbox" name="hear_about" > Other  <input type="text" id="hear_about_other_value" name="hear_about_other_value"> </div>  
+              <div> </div>                           
+            </p>               
+          </fieldset> 
+        </div>
+        <div>
+          <p>Logo (.svg or .ai format preferred, if possible): <input type="file" name="org_logo" 
+            accept="image/*,.ai,.svg,.psd,.eps" /></p>
         </div>
         <div>
           <button type="submit" class="btn w-100 w-auto-ns raise">Send Logo</button>
@@ -24,4 +45,21 @@
   </div>
 </div>
 
+
+<script>
+  const otherCheckbox = document.querySelector('#hear_about_other_checkbox');
+  const otherText = document.querySelector('#hear_about_other_value');
+  otherText.style.visibility = 'hidden';
+
+  otherCheckbox.addEventListener('change', () => {
+  if(otherCheckbox.checked) {
+    otherText.style.visibility = 'visible';
+    otherText.value = '';
+  } else {
+    otherText.style.visibility = 'hidden';
+  }
+});
+  </script>
 {{ end }}
+
+
