--- a/site/layouts/_default/become-a-friend.html
+++ b/site/layouts/_default/become-a-friend.html
@@ -14,7 +14,7 @@
           <p class="mw7 fw7 mb2">Organization Name: <input class="w-100 bg-off-white input-reset ba b--black-20 pa2 mb2 db" type="text" name="org_name"></p>
         </div>
         <div class="mw7">
-          <p class="mw7 fw7 mb2">Contact email: <input class="w-100 bg-off-white input-reset ba b--black-20 pa2 mb2 db" type="email" name="contact_email">
+          <p class="mw7 fw7 mb2">Contact Email: <input class="w-100 bg-off-white input-reset ba b--black-20 pa2 mb2 db" type="email" name="contact_email">
           </p>
     
         </div>
@@ -23,7 +23,7 @@
             <legend class="mw7 fw7 mb2">How did you hear about the Friends of the Open Voice Network program?</legend>
             <div class="ph2 mw6">
               <div class="flex items-center mb2">
-                <input class="mr2" type="checkbox" name="hear_about" value="blog">Blog or publication
+                <input class="mr2" type="checkbox" name="hear_about" value="blog">Blog or Publication
               </div>
               <div class="flex items-center mb2"> <input class="mr2" type="checkbox" name="hear_about" value="event">Conference or Event </div>
               <div class="flex items-center mb2"> <input class="mr2" type="checkbox" name="hear_about" value="peer">Peer
