add new content to become a friends page

--- a/site/layouts/section/friends-of-the-open-voice-network.html
+++ b/site/layouts/section/friends-of-the-open-voice-network.html
@@ -2,7 +2,7 @@
 
 {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title) }}
 
-<div class="bg-off-white pt4">
+<div class="mw7 center bg-off-white pt4 cms">
   {{ range .Params.hardsell }}
 	<div class="mw7 center mt4 mb4">
 		<h2 class="f2 b lh-title mb2">{{.heading}}</h2>
