--- a/site/layouts/_default/become-a-friend.html
+++ b/site/layouts/_default/become-a-friend.html
@@ -2,51 +2,113 @@
 
 {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title) }}
 
-<div class="bg-off-white pt4">
+<div class="mw9 center bg-off-white pt4">
   <div class="mw7 center ph3 pt4 mb5">
-    <div class="cms">
+    <div class="w-100 cms">
       {{ .Content }}
     </div>
 
     <div class="mw6 br1 bg-grey-1 center pa3 ba b--grey-3">
-      <form action="/friends-of-the-open-voice-network/thank-you/" class="pa2" enctype="multipart/form-data" method="POST" name="become_a_friend"><input type="hidden" name="form-name" value="become_a_friend">
+      <form action="/friends-of-the-open-voice-network/thank-you/" class="pa2" enctype="multipart/form-data"
+        method="POST" name="become_a_friend"><input type="hidden" name="form-name" value="become_a_friend">
         <div class="mw7">
-          <p class="mw7 fw7 mb2">Organization Name: <input class="w-100 bg-off-white input-reset ba b--black-20 pa2 mb2 db" type="text" name="org_name"></p>
+          <p class="mw7 fw7 mb2">Organization Name: <input
+              class="w-100 bg-off-white input-reset ba b--black-20 pa2 mb2 db" type="text" name="org_name"></p>
         </div>
         <div class="mw7">
-          <p class="mw7 fw7 mb2">Contact Email: <input class="w-100 bg-off-white input-reset ba b--black-20 pa2 mb2 db" type="email" name="contact_email">
+          <p class="mw7 fw7 mb2">Contact Email: <input class="w-100 bg-off-white input-reset ba b--black-20 pa2 mb2 db"
+              type="email" name="contact_email">
           </p>
-    
+
         </div>
         <div class="mw7">
           <fieldset class="mw7">
             <legend class="mw7 fw7 mb2">How did you hear about the Friends of the Open Voice Network program?</legend>
-            <div class="ph2 mw6">
-              <div class="flex items-center mb2">
+            <div class="ph2 mw6 cf">
+              <div class="fl w-100 w-50-ns mb2">
                 <input class="mr2" type="checkbox" name="hear_about" value="blog">Blog or Publication
               </div>
-              <div class="flex items-center mb2"> <input class="mr2" type="checkbox" name="hear_about" value="event">Conference or Event </div>
-              <div class="flex items-center mb2"> <input class="mr2" type="checkbox" name="hear_about" value="peer">Peer
-                recommendation </div>
-              <div class="flex items-center mb2"> <input class="mr2" type="checkbox" name="hear_about" value="podcast">Podcast </div>
-              <div class="flex items-center mb2"> <input class="mr2" type="checkbox" name="hear_about" value="seo">Search
-                engine </div>
-              <div class="flex items-center mb2">
-                <input class="mr2" type="checkbox" id="hear_about_other_checkbox" name="hear_about">
-                Other
+              <div class="fl w-100 w-50-ns mb2"> <input class="mr2" type="checkbox" name="hear_about"
+                  value="event">Conference or Event
               </div>
-              <div class="mw7 pb2 "><textarea rows="3" class="w-90 mh2" id="hear_about_other_value" name="hear_about_other_value" style="display: none;">                </textarea>
+              <div class="fl w-100 w-50-ns mb2"> <input class="mr2" type="checkbox" name="hear_about"
+                  value="podcast">Podcast </div>
+              <div class="fl w-100 w-50-ns mb2"> <input class="mr2" type="checkbox" name="hear_about" value="seo">Search
+                engine </div>
+              <div class="fl w-100 w-50-ns mb2">
+                <div>
+                  <input class="mr2" type="checkbox" id="hear_about_other_checkbox" name="hear_about">Other
+                </div>
+                <div class="pb2"><textarea rows="1" class="w-90 mh2" id="hear_about_other_value"
+                    name="hear_about_other_value" style="display: none;"></textarea>
+                </div>
+              </div>
+              <div class="fl w-100 w-50-ns mb2">
+                <div>
+                  <input class="mr2" type="checkbox" id="referral_checkbox" name="hear_about">Peer referral
+                </div>
+                <div class="pb2 "><textarea rows="1" class="w-90 mh2" id="referral_value" name="referral_value"
+                    style="display: none;"></textarea>
+                </div>
               </div>
             </div>
           </fieldset>
         </div>
         <div class="mw7">
+          <fieldset class="mw7">
+            <legend class="mw7 fw7 mb2">Please choose up to two OVON Work Groups and Communities of interest:</legend>
+            <div class="ph2 mw6 cf">
+              <div class="fl w-100 w-50-ns mb2">
+                <input class="mr2" type="checkbox" name="interest" value="Architecture Work Group">Architecture Work
+                Group
+              </div>
+              <div class="fl w-100 w-50-ns mb2">
+                <input class="mr2" type="checkbox" name="interest" value="Authentication Study Grou">Authentication
+                Study Group
+              </div>
+              <div class="fl w-100 w-50-ns mb2">
+                <input class="mr2" type="checkbox" name="interest" value="Commerce Community">Commerce Community
+              </div>
+              <div class="fl w-100 w-50-ns mb2">
+                <input class="mr2" type="checkbox" name="interest" value="Europe Community">Europe Community
+              </div>   
+              <div class="fl w-100 w-50-ns mb2">
+                <input class="mr2" type="checkbox" name="interest" value="Education Steering Team Community">Education
+                Steering Team Community
+              </div>
+              <div class="fl w-100 w-50-ns mb2">
+                <input class="mr2" type="checkbox" name="interest" value="Ethical Use Task Force Community">Ethical Use
+                Task Force Community
+              </div>                    
+           
+              <div class="fl w-100 w-50-ns mb2">
+                <input class="mr2" type="checkbox" name="interest"
+                  value="Health, Wellness, and Life Sciences Community">Health, Wellness, and Life Sciences Community
+              </div>            
+            
+              <div class="fl w-100 w-50-ns mb2">
+                <input class="mr2" type="checkbox" name="interest" value="Media & Entertainment Community">Media &
+                Entertainment Community
+              </div>
+              <div class="fl w-100 w-50-ns mb2">
+                <input class="mr2" type="checkbox" name="interest" value="Voice Registry System (VRS) Work Group">Voice
+                Registry System (VRS) Work Group
+              </div>
+              <div class="fl w-100 w-50-ns mb2">
+                <input class="mr2" type="checkbox" name="interest" value=" Synthetic Voice Study Group">Synthetic Voice
+                Study Group
+              </div>            
+            </div>
+          </fieldset>
+        </div>
+        <div class="mw7">
           <p class="fw7 mb2"> Logo (.svg or .ai format preferred, if possible):
-            <input class="input-reset w-90 bg-grey-1 ph0" type="file" name="org_logo" accept="image/*,.ai,.svg,.psd,.eps">
+            <input class="input-reset w-90 bg-grey-1 ph0" type="file" name="org_logo"
+              accept="image/*,.ai,.svg,.psd,.eps">
           </p>
         </div>
         <div>
-          <button type="submit" class="btn w-100 w-auto-ns raise">Send Logo</button>
+          <button type="submit" class="btn w-100 w-auto-ns raise">Sumbit</button>
         </div>
       </form>
     </div>
@@ -58,6 +120,19 @@
 
 
 <script>
+  const referralCheckbox = document.querySelector('#referral_checkbox');
+  const referralText = document.querySelector('#referral_value');
+  referralText.style.display = 'none'
+
+  referralCheckbox.addEventListener('change', () => {
+    if (referralCheckbox.checked) {
+      referralText.style.display = 'block'
+      referralText.value = '';
+    } else {
+      referralText.style.display = 'none'
+    }
+  });
+
   const otherCheckbox = document.querySelector('#hear_about_other_checkbox');
   const otherText = document.querySelector('#hear_about_other_value');
   otherText.style.display = 'none'
@@ -70,5 +145,26 @@
       otherText.style.display = 'none'
     }
   });
+
+  function limitInterestSelections(limit) {
+    const checkboxgroup = document.getElementsByName("interest");
+
+    for (var i = 0; i < checkboxgroup.length; i++) {
+      checkboxgroup[i].onclick = function (e) {
+        if (e.target.checked) {
+          var checkedcount = 0;
+          for (var i = 0; i < checkboxgroup.length; i++) {
+            checkedcount += (checkboxgroup[i].checked) ? 1 : 0;
+          }
+          if (checkedcount > limit) {
+            alert("You can only select 2 interests!");
+            this.checked = false;
+          }
+        }
+      }
+    }
+  }
+
+  limitInterestSelections(2);
 </script>
 {{ end }}
