test name array instead of field set

--- a/site/layouts/_default/become-a-friend.html
+++ b/site/layouts/_default/become-a-friend.html
@@ -61,47 +61,47 @@
           </fieldset>
         </div>
         <div class="mw7">
-          <fieldset class="mw7">
+          <fieldset class="mw7" >
             <legend class="mw7 fw7 mb2">Please choose up to two OVON Work Groups and Communities of interest:</legend>
             <div class="ph2 mw6 cf">
               <div class="fl w-100 w-50-ns mb2">
-                <input class="mr2" type="checkbox" name="interest" value="Architecture Work Group">Architecture Work
+                <input class="mr2" type="checkbox" name="interest[]" value="Architecture Work Group">Architecture Work
                 Group
               </div>
               <div class="fl w-100 w-50-ns mb2">
-                <input class="mr2" type="checkbox" name="interest" value="Authentication Study Grou">Authentication
+                <input class="mr2" type="checkbox" name="interest[]" value="Authentication Study Grou">Authentication
                 Study Group
               </div>
               <div class="fl w-100 w-50-ns mb2">
-                <input class="mr2" type="checkbox" name="interest" value="Commerce Community">Commerce Community
+                <input class="mr2" type="checkbox" name="interest[]" value="Commerce Community">Commerce Community
               </div>
               <div class="fl w-100 w-50-ns mb2">
-                <input class="mr2" type="checkbox" name="interest" value="Europe Community">Europe Community
+                <input class="mr2" type="checkbox" name="interest[]" value="Europe Community">Europe Community
               </div>
               <div class="fl w-100 w-50-ns mb2">
-                <input class="mr2" type="checkbox" name="interest" value="Education Steering Team Community">Education
+                <input class="mr2" type="checkbox" name="interest[]" value="Education Steering Team Community">Education
                 Steering Team Community
               </div>
               <div class="fl w-100 w-50-ns mb2">
-                <input class="mr2" type="checkbox" name="interest" value="Ethical Use Task Force Community">Ethical Use
+                <input class="mr2" type="checkbox" name="interest[]" value="Ethical Use Task Force Community">Ethical Use
                 Task Force Community
               </div>
 
               <div class="fl w-100 w-50-ns mb2">
-                <input class="mr2" type="checkbox" name="interest"
+                <input class="mr2" type="checkbox" name="interest[]"
                   value="Health, Wellness, and Life Sciences Community">Health, Wellness, and Life Sciences Community
               </div>
 
               <div class="fl w-100 w-50-ns mb2">
-                <input class="mr2" type="checkbox" name="interest" value="Media & Entertainment Community">Media &
+                <input class="mr2" type="checkbox" name="interest[]" value="Media & Entertainment Community">Media &
                 Entertainment Community
               </div>
               <div class="fl w-100 w-50-ns mb2">
-                <input class="mr2" type="checkbox" name="interest" value="Voice Registry System (VRS) Work Group">Voice
+                <input class="mr2" type="checkbox" name="interest[]" value="Voice Registry System (VRS) Work Group">Voice
                 Registry System (VRS) Work Group
               </div>
               <div class="fl w-100 w-50-ns mb2">
-                <input class="mr2" type="checkbox" name="interest" value=" Synthetic Voice Study Group">Synthetic Voice
+                <input class="mr2" type="checkbox" name="interest[]" value=" Synthetic Voice Study Group">Synthetic Voice
                 Study Group
               </div>
             </div>
